--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "symfony/twig-bundle": "4.1.*",
         "symfony/validator": "4.1.*",
         "symfony/web-link": "4.1.*",
-        "symfony/yaml": "4.1.*"
+        "symfony/yaml": "4.1.*",
+      "ext-http": "*"
     },
     "require-dev": {
         "deployer/deployer": "^6.3",
