--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
     "require": {
         "php": "^7.1.3",
         "ext-ctype": "*",
+        "ext-http": "*",
         "ext-iconv": "*",
+        "guzzlehttp/guzzle": "^6.3",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "4.1.*",
@@ -25,7 +27,7 @@
         "symfony/validator": "4.1.*",
         "symfony/web-link": "4.1.*",
         "symfony/yaml": "4.1.*",
-      "ext-http": "*"
+      "ext-json": "*"
     },
     "require-dev": {
         "deployer/deployer": "^6.3",
