--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "ext-ctype": "*",
         "ext-http": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
         "guzzlehttp/guzzle": "^6.3",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/apache-pack": "^1.0",
@@ -26,8 +27,8 @@
         "symfony/twig-bundle": "4.1.*",
         "symfony/validator": "4.1.*",
         "symfony/web-link": "4.1.*",
-        "symfony/yaml": "4.1.*",
-      "ext-json": "*"
+        "symfony/webpack-encore-bundle": "^1.0",
+        "symfony/yaml": "4.1.*"
     },
     "require-dev": {
         "deployer/deployer": "^6.3",
